// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Ul AllowTagsComponent UU5.Bricks.Ul props - allowTags 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID02"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Buy milk"
      id="uuID03"
      key="uuID03"
    />
    <UU5.Example.MyCompLi
      content="allow tags content"
      id="alloid"
      key="alloid"
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul allowTags=undefined 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkGrammar=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkGrammar=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkHighlight=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkHighlight=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkSpaces=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkSpaces=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul className="my-classname" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul my-classname"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul className="test-classname" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul test-classname"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul content="This is Content from ContentMixin" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul content=12345 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul controlled=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul controlled=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul default props 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled=false 3`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled=true 3`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul dynamic=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul dynamic=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Footer
      content={
        <div>
          Footer of section
        </div>
      }
      id="uuID-footer"
      key="uuID-footer"
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul fullTextSearchPriority=0 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu-fulltextsearch-0"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Header
      content={
        <div>
          Header of section
        </div>
      }
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden=false 3`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden=true 3`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul id="myId" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="myId"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul id="test-id" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="test-id"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul ignoreHTML=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul ignoreHTML=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="0" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="1" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="2" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="3" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="4" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="5" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level="6" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=0 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=1 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=2 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=3 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=4 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=5 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level=6 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul mainAttrs=undefined 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul name="myName" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="bigBox" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="bigBoxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="box" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="box" 3`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="boxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="container" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="inline" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu-bricks-18xdgtf"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="inline" 3`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu-bricks-18xdgtf"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="page" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="smallBox" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu-bricks-18xdgtf"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="smallBoxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu-bricks-18xdgtf"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel="spa" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noIndex=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noIndex=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-noindex uu-fulltextsearch-0"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noPrint=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noPrint=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul selected=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul selected=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-selected"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style="padding:8px; borderRadius: 2px" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style={"backgroundColor":"red","color":"blue"} 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style={"margin":8} 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "margin": 8,
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul textCorrector=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul textCorrector=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul tooltip="My Tooltip" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type="circle" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-circle-outline",
      "ordered": false,
      "type": "circle",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-circle"
    id="uuID"
    style={Object {}}
    title={null}
    type="circle"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type="disc" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-circle",
      "ordered": false,
      "type": "disc",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-disc"
    id="uuID"
    style={Object {}}
    title={null}
    type="disc"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type="square" 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-square",
      "ordered": false,
      "type": "square",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-square"
    id="uuID"
    style={Object {}}
    title={null}
    type="square"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul underline=false 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul underline=true 1`] = `
<ContextProvider
  value={
    Object {
      "iconColorSchema": null,
      "listLevel": 1,
      "markerIcon": "mdi-default",
      "ordered": false,
      "type": null,
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;
